--- a/UIShop/UIShop.rc
+++ b/UIShop/UIShop.rc
@@ -510,15 +510,18 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 228, 66
+IDD_ABOUTBOX DIALOGEX 0, 0, 340, 101
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About UIShop"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
-    LTEXT           "UIShop, Version 9.0",IDC_STA_VERSION,42,14,179,8,SS_NOPREFIX | SS_ENDELLIPSIS
-    LTEXT           "Copyright (C) 2005-2018 iUIShop",IDC_STA_COPYRIGHT,42,26,179,8
-    DEFPUSHBUTTON   "OK",IDOK,171,45,50,14,WS_GROUP
+    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,21,20
+    LTEXT           "UIShop, LibUIDK Version 10.0",IDC_STA_VERSION,42,14,179,8,SS_NOPREFIX | SS_ENDELLIPSIS
+    LTEXT           "Copyright (C) 2005-2019 iUIShop",IDC_STA_COPYRIGHT,42,26,179,8
+    DEFPUSHBUTTON   "OK",IDOK,283,80,50,14,WS_GROUP
+    LTEXT           "http://www.iuishop.com",IDC_STA_HOME_PAGE,42,41,291,8
+    LTEXT           "???:https://github.com/iUIShop/LibUIDK",IDC_STA_SOURCE_CODE,42,53,291,8
+    LTEXT           "????????,???LibUIDK???????QQ:1584793892",IDC_STA_INFO,42,65,291,8
 END
 
 IDD_NEWPROJECT DIALOGEX 0, 0, 341, 270
@@ -770,9 +773,9 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 221
+        RIGHTMARGIN, 333
         TOPMARGIN, 7
-        BOTTOMMARGIN, 59
+        BOTTOMMARGIN, 94
     END
 
     IDD_NEWPROJECT, DIALOG
