--- a/UIShop/UIShop_vs2010.vcxproj
+++ b/UIShop/UIShop_vs2010.vcxproj
@@ -1410,6 +1410,7 @@
     <None Include="Template\BtnClose.png" />
     <None Include="Template\BtnMax.png" />
     <None Include="Template\BtnMin.png" />
+    <None Include="Template\Loc_enu.rcf" />
     <None Include="UIShop.reg" />
     <None Include="res\WinUser_h" />
   </ItemGroup>
