--- a/UIShop/UIShop_vs2010.vcxproj.filters
+++ b/UIShop/UIShop_vs2010.vcxproj.filters
@@ -432,6 +432,7 @@
     <None Include="Template\BtnClose.png">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Template\Loc_enu.rcf" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="UIShop.rc">
