LibUIDK: 去掉tree控件的垂直平滑滚动效果，这个效果支持的不太好；去掉创建工程时对vs版本的选择，直接创建出所有vs版本的工程文件；去掉联系人和故事板面板，实际开发中从未使用过；去掉Handler机制，在实践过程中，发现引入新的概念后，会使程序员迷茫，默认改回基于CWnd的窗口方式。

--- a/UIShop/Template/Root_100.vcxproj
+++ b/UIShop/Template/Root_100.vcxproj
@@ -158,8 +158,8 @@ $$IF(IM)
     <ClInclude Include="StartMenu.h" />
 $$ENDIF // IM
 $$IF(DLG)
-    <ClInclude Include="ChildWndHandler.h" />
-    <ClInclude Include="MainWndHandler.h" />
+    <ClInclude Include="ChildWnd.h" />
+    <ClInclude Include="MainWnd.h" />
 $$ENDIF // DLG
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -187,8 +187,8 @@ $$IF(MDI)
     <ClCompile Include="MainFrm.cpp" />
 $$ENDIF // MDI
 $$IF(DLG)
-    <ClCompile Include="ChildWndHandler.cpp" />
-    <ClCompile Include="MainWndHandler.cpp" />
+    <ClCompile Include="ChildWnd.cpp" />
+    <ClCompile Include="MainWnd.cpp" />
 $$ENDIF // DLG
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
