--- a/UIShop/Template/Root_80.vcproj
+++ b/UIShop/Template/Root_80.vcproj
@@ -193,7 +193,7 @@
 			>
 $$IF(DLG)
 			<File
-				RelativePath=".\ChildWndHandler.cpp"
+				RelativePath=".\ChildWnd.cpp"
 				>
 			</File>
 $$ENDIF // DLG
@@ -203,7 +203,7 @@ $$ENDIF // DLG
 			</File>
 $$IF(DLG)
 			<File
-				RelativePath=".\MainWndHandler.cpp"
+				RelativePath=".\MainWnd.cpp"
 				>
 			</File>
 $$ENDIF // DLG
@@ -291,7 +291,7 @@ $$ENDIF // IM
 			>
 $$IF(DLG)
 			<File
-				RelativePath=".\ChildWndHandler.h"
+				RelativePath=".\ChildWnd.h"
 				>
 			</File>
 $$ENDIF // DLG
@@ -301,7 +301,7 @@ $$ENDIF // DLG
 			</File>
 $$IF(DLG)
 			<File
-				RelativePath=".\MainWndHandler.h"
+				RelativePath=".\MainWnd.h"
 				>
 			</File>
 $$ENDIF // DLG
