--- a/UIShop/UIShop.rc
+++ b/UIShop/UIShop.rc
@@ -286,7 +286,6 @@ IDR_MAINFRAME MENU
 BEGIN
     POPUP "&File"
     BEGIN
-        MENUITEM "&New\tCtrl+N",                ID_FILE_NEW, INACTIVE
         MENUITEM "New LibUIDK Project...",      ID_FILE_NEW_LIBUIDK_PROJECT
         MENUITEM "&Open...\tCtrl+O",            ID_FILE_OPEN
         MENUITEM "&Close",                      ID_FILE_CLOSE
@@ -431,8 +430,8 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Add Class",                   IDSM_ADD_CLASS
         MENUITEM "Add All Classes",             IDSM_ADD_ALL_CLASSES
-        MENUITEM "Add Event Handler Class",     IDSM_ADD_EVENT_HANDLER_CLASS
-        MENUITEM "Add All Event Handler Classes", IDSM_ADD_ALL_EVENT_HANDLER_CLASSES
+        MENUITEM "Add Event Handler Class",     IDSM_ADD_EVENT_HANDLER_CLASS, GRAYED
+        MENUITEM "Add All Event Handler Classes", IDSM_ADD_ALL_EVENT_HANDLER_CLASSES, GRAYED
     END
 END
 
@@ -510,57 +509,45 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 340, 101
+IDD_ABOUTBOX DIALOGEX 0, 0, 228, 66
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About UIShop"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,21,20
-    LTEXT           "UIShop, LibUIDK Version 10.0",IDC_STA_VERSION,42,14,179,8,SS_NOPREFIX | SS_ENDELLIPSIS
-    LTEXT           "Copyright (C) 2005-2019 iUIShop",IDC_STA_COPYRIGHT,42,26,179,8
-    DEFPUSHBUTTON   "OK",IDOK,283,80,50,14,WS_GROUP
-    LTEXT           "http://www.iuishop.com",IDC_STA_HOME_PAGE,42,41,291,8
-    LTEXT           "???:https://github.com/iUIShop/LibUIDK",IDC_STA_SOURCE_CODE,42,53,291,8
-    LTEXT           "????????,???LibUIDK???????QQ:1584793892",IDC_STA_INFO,42,65,291,8
+    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
+    LTEXT           "UIShop, Version 9.0",IDC_STA_VERSION,42,14,179,8,SS_NOPREFIX | SS_ENDELLIPSIS
+    LTEXT           "Copyright (C) 2005-2018 iUIShop",IDC_STA_COPYRIGHT,42,26,179,8
+    DEFPUSHBUTTON   "OK",IDOK,171,45,50,14,WS_GROUP
 END
 
-IDD_NEWPROJECT DIALOGEX 0, 0, 341, 270
+IDD_NEWPROJECT DIALOGEX 0, 0, 341, 222
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "New LibUIDK Project Wizard"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,227,248,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,284,248,50,14
-    GROUPBOX        "Select Visual Studio Edition",IDC_STATIC,7,5,326,48
-    CONTROL         "Visual C++ 6.0",IDC_RAD_VC60,"Button",BS_AUTORADIOBUTTON,13,18,64,10
-    CONTROL         "Visual C++ 2003",IDC_RAD_VC71,"Button",BS_AUTORADIOBUTTON,87,18,69,10
-    CONTROL         "Visual C++ 2005",IDC_RAD_VC80,"Button",BS_AUTORADIOBUTTON,166,18,69,10
-    CONTROL         "Visual C++ 2008",IDC_RAD_VC90,"Button",BS_AUTORADIOBUTTON,245,18,69,10
-    CONTROL         "Visual C++ 2010",IDC_RAD_VC100,"Button",BS_AUTORADIOBUTTON,13,35,69,10
-    CONTROL         "Visual C++ 2012",IDC_RAD_VC110,"Button",BS_AUTORADIOBUTTON,87,35,69,10
-    CONTROL         "Visual C++ 2013",IDC_RAD_VC120,"Button",BS_AUTORADIOBUTTON,166,35,69,10
-    CONTROL         "Visual C++ 2015",IDC_RAD_VC140,"Button",BS_AUTORADIOBUTTON,245,35,69,10
-    LTEXT           "Select Project Type",IDC_STATIC,12,55,63,8
-    CONTROL         "General",IDC_RAD_PROJECT_GENERAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,22,67,41,10
-    CONTROL         "Multiple documents",IDC_RAD_PROJECT_MDI,"Button",BS_AUTORADIOBUTTON,87,67,77,10
-    CONTROL         "IM",IDC_RAD_PROJECT_IM,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,179,67,36,10
-    CONTROL         "Security Software",IDC_RAD_PROJECT_WEISHI,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,245,67,75,10
-    LTEXT           "What database support would you like to include?",IDC_STATIC,12,80,266,10
-    CONTROL         "none",IDC_RAD_NONE,"Button",BS_AUTORADIOBUTTON,22,90,32,10
-    CONTROL         "Header files only",IDC_RAD_HEADER,"Button",BS_AUTORADIOBUTTON,22,101,84,10
-    LTEXT           "What other support would you like to include?",IDC_STATIC,12,114,181,8
-    CONTROL         "ActiveX controls",IDC_CHK_ACTIVEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,22,124,80,10
-    LTEXT           "What features would you like to include?",IDC_STATIC,12,135,161,8
-    CONTROL         "Windows Sockets",IDC_CHK_SOCKET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,22,146,82,10
-    LTEXT           "Would you like to generate source file comments?",IDC_STATIC,12,157,193,8
-    CONTROL         "Yes, please",IDC_RAD_YES,"Button",BS_AUTORADIOBUTTON,22,167,60,10
-    CONTROL         "No, thank you",IDC_RAD_NO,"Button",BS_AUTORADIOBUTTON,22,178,68,10
-    LTEXT           "Project Name:",IDC_STATIC,12,190,46,8
-    EDITTEXT        IDC_EDT_PROJECTNAME,22,199,311,14,ES_AUTOHSCROLL
-    LTEXT           "Location:",IDC_STATIC,12,216,30,8
-    EDITTEXT        IDC_EDT_LOCATION,22,226,235,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "...",IDC_BTN_BROWSER,268,226,28,14
-    PUSHBUTTON      "Go to",IDC_BTN_GOTO,306,226,28,14
+    DEFPUSHBUTTON   "OK",IDOK,227,200,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,284,200,50,14
+    LTEXT           "Select Project Type",IDC_STATIC,12,7,63,8
+    CONTROL         "General",IDC_RAD_PROJECT_GENERAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,22,19,41,10
+    CONTROL         "Multiple documents",IDC_RAD_PROJECT_MDI,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,87,19,77,10
+    CONTROL         "IM",IDC_RAD_PROJECT_IM,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,179,19,36,10
+    CONTROL         "Security Software",IDC_RAD_PROJECT_WEISHI,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,245,19,75,10
+    LTEXT           "What database support would you like to include?",IDC_STATIC,12,32,266,10
+    CONTROL         "none",IDC_RAD_NONE,"Button",BS_AUTORADIOBUTTON,22,42,32,10
+    CONTROL         "Header files only",IDC_RAD_HEADER,"Button",BS_AUTORADIOBUTTON,22,53,84,10
+    LTEXT           "What other support would you like to include?",IDC_STATIC,12,66,181,8
+    CONTROL         "ActiveX controls",IDC_CHK_ACTIVEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,22,76,80,10
+    LTEXT           "What features would you like to include?",IDC_STATIC,12,87,161,8
+    CONTROL         "Windows Sockets",IDC_CHK_SOCKET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,22,98,82,10
+    LTEXT           "Would you like to generate source file comments?",IDC_STATIC,12,109,193,8
+    CONTROL         "Yes, please",IDC_RAD_YES,"Button",BS_AUTORADIOBUTTON,22,119,60,10
+    CONTROL         "No, thank you",IDC_RAD_NO,"Button",BS_AUTORADIOBUTTON,22,130,68,10
+    LTEXT           "Project Name:",IDC_STATIC,12,142,46,8
+    EDITTEXT        IDC_EDT_PROJECTNAME,22,151,311,14,ES_AUTOHSCROLL
+    LTEXT           "Location:",IDC_STATIC,12,168,30,8
+    EDITTEXT        IDC_EDT_LOCATION,22,178,235,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "...",IDC_BTN_BROWSER,268,178,28,14
+    PUSHBUTTON      "Go to",IDC_BTN_GOTO,306,178,28,14
 END
 
 IDD_TABORDER DIALOGEX 0, 0, 405, 289
@@ -577,13 +564,13 @@ BEGIN
     PUSHBUTTON      "Highlight",IDC_BTN_HIGHLIGHT,348,172,50,14
 END
 
-IDD_CLASS_WIZARD DIALOGEX 0, 0, 366, 215
+IDD_CLASS_WIZARD DIALOGEX 0, 0, 366, 180
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "LibUIDK Class Wizard"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "OK",IDOK,246,194,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,309,194,50,14
+    PUSHBUTTON      "OK",IDOK,246,159,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,309,159,50,14
     LTEXT           "Class Name:",IDC_STATIC,7,7,40,8
     EDITTEXT        IDC_EDT_CLASS_NAME,7,20,162,14,ES_AUTOHSCROLL
     LTEXT           "Window ID:",IDC_STATIC,197,7,38,8,WS_DISABLED
@@ -596,16 +583,13 @@ BEGIN
     EDITTEXT        IDC_EDT_LOCATION,7,86,246,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Browse...",IDC_BTN_BROWSE,256,86,50,14
     PUSHBUTTON      "Goto",IDC_BTN_GOTO,309,86,50,14
-    GROUPBOX        "Code Style",IDC_STATIC,7,119,352,28
-    CONTROL         "Visual Studio 6.0",IDC_RAD_VC6,"Button",BS_AUTORADIOBUTTON,18,131,69,10
-    CONTROL         "Visual Studio.Net",IDC_RAD_VC_NET,"Button",BS_AUTORADIOBUTTON,179,131,70,10
     CONTROL         "Generate Control Event Handler",IDC_CHK_GEN_HANDLER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,156,119,10
-    CONTROL         "Generate Control Variable",IDC_CHK_GEN_VARIABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,193,153,99,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,121,119,10
+    CONTROL         "Generate Control Variable",IDC_CHK_GEN_VARIABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,193,118,99,10
     CONTROL         "Generate DoDataExchange",IDC_CHK_GEN_DO_DATA_EXCHANGE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,172,103,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,137,103,10
     LTEXT           "Merge Tool Path:",IDC_STATIC,7,106,56,8
-    COMBOBOX        IDC_CMB_MERGE_TOOL_PATH,73,103,179,14,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_CMB_MERGE_TOOL_PATH,73,103,179,48,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Browse...",IDC_BTN_BROWSE_MERGE_TOOL,256,103,50,14
     PUSHBUTTON      "Merge...",IDC_BTN_MERGE,309,103,50,14
 END
@@ -615,7 +599,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Image Symbols"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_TREE_IMAGE_SYMBOLS,"SysTreeView32",TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,7,302,146
+    CONTROL         "",IDC_TREE_IMAGE_SYMBOLS,"SysTreeView32",TVS_EDITLABELS | TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,7,302,146
     PUSHBUTTON      "Move themes to 'Unused' folder",IDC_BTN_MOVE_TO_UNUSED,171,159,138,14
 END
 
@@ -773,9 +757,9 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 333
+        RIGHTMARGIN, 221
         TOPMARGIN, 7
-        BOTTOMMARGIN, 94
+        BOTTOMMARGIN, 59
     END
 
     IDD_NEWPROJECT, DIALOG
@@ -783,7 +767,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 334
         TOPMARGIN, 7
-        BOTTOMMARGIN, 263
+        BOTTOMMARGIN, 215
     END
 
     IDD_TABORDER, DIALOG
@@ -799,7 +783,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 359
         TOPMARGIN, 7
-        BOTTOMMARGIN, 208
+        BOTTOMMARGIN, 173
     END
 
     IDD_IMAGE_SYMBOLS, DIALOG
