--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@
 /UIShop/ipch
 /UIShop/*.ncb
 /UIShop.1.0
+/LibUIDK/Debug2019u
+/LibUIDK/Debugu_vs2017
+/LibUIDK/Release2019su
+/UIShop/Debug
+/UIShop/Release
+/LibUIDK/.vs
+/UIShop/.vs
+/LibUIDK/Releasesu_vs2017
