LibUIDK-修复部分编译警告。

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@
 /LibUIDK/.vs
 /UIShop/.vs
 /LibUIDK/Releasesu_vs2017
+/LibUIDK/Debug_vs2017
+/LibUIDK/Debugs_vs2017
+/LibUIDK/Debugsud_vs2017
+/LibUIDK/Release_vs2017
+/LibUIDK/Releases_vs2017
+/LibUIDK/Releaseu_vs2017
+/LibUIDK/x64
+/LibUIDK/ipch
