LibUIDK: 使用vs2019编译通过.

--- a/UIShop/UIShop_vs2017.vcxproj
+++ b/UIShop/UIShop_vs2017.vcxproj
@@ -96,7 +96,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>../LibUIDK/Lib/LibUIDKud_vs2017.lib</AdditionalDependencies>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -145,7 +146,8 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>../LibUIDK/Lib/LibUIDKsu_vs2017.lib</AdditionalDependencies>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -309,6 +311,11 @@
     <Image Include="res\UIShop.ico" />
     <Image Include="res\UIShopDoc.ico" />
     <Image Include="res\userimages.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibUIDK\LibUIDK_vs2017.vcxproj">
+      <Project>{b108c49c-6216-43a9-a266-619c2bebfad5}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
