LibUIDK\UIShop: 解决在高DPI上运行界面编辑器时的崩溃问题。这是由于Toolbar256.bmp的高度，必须为16。

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /LibUIDK/ipch
 /UIShop/x64/Debug Unicode
 /UIShop/x64/Release Unicode Static
+/LibUIDK/LibUIDK_vs2017.vcxproj.user
+/LibUIDK/LibUIDK_vs2019.vcxproj.user
