--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,29 @@
 /UIShop/x64/Release Unicode Static
 /LibUIDK/LibUIDK_vs2017.vcxproj.user
 /LibUIDK/LibUIDK_vs2019.vcxproj.user
+/CombineImage
+/DirectHWND
+/Document
+/EnterpriseRegistryTool
+/Help/Images
+/Help/LibUIDK_CHS
+/Help/PreBuild
+/Help/UIShop Video Help
+/Help/UIShop_Help
+/Install
+/RegistryTool
+/Test
+/外包合作流程.txt
+/美工加皮肤编辑项目外包合同.doc
+/设置环境变量.bat
+/软件项目外包合同.doc
+/LibUIDK/Render回收代码.txt
+/LibUIDK/编译问题.txt
+/LibUIDK价格历史.txt
+/LibUIDK升级合同.doc
+/LibUIDK软件使用许可合同.doc
+/NT119Admin.exe
+/NT119用户使用参考手册.pdf
+/Help/Develop/UIWNDPROPERTIES内存布局.bmp
+/Help/LibUIDK函数改名.txt
+/LibUIDK/*.user
